--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a href="mailto:ansetaabu2030@gmail.com">ansetaabu2030@gmail.com</a>
             </div>    
             <div class="col-md-4 logo order-1 order-md-12">
-              <img class="logo-img" src="img/logo2.png" alt="">
+              <img class="logo-img" src="img/myLogo.jpg" alt="">
             </div> 
             <div class="col-md-4 top-bar-right order-3 order-md-12">
               <i class="fas fa-phone-alt"></i> 
@@ -239,11 +239,11 @@
         <div class="row sections-detail">
           <div class="col-12">
             <h2 class="section-title">Ma Disponibilité</h2>
-            <p class="section-title-desc">Contactez-moi via le formulaire ci-dessous</p>
+            <!--p class="section-title-desc">Contactez-moi via le formulaire ci-dessous</p-->
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6">
+          <!--div class="col-lg-6">
             <div class="appointment">
               <h2 class="appointment-title">rdv</h2>
               <p class="appointment-desc">hâte de vous lire...</p>
@@ -282,19 +282,19 @@
                   </div>
                </form>
             </div> 
-          </div>
+        </div-->
           <div class="col-lg-6 open-time">
             <div class="weekdays">
               <h3 class="open-time-title">Lundi - Vendredi</h3>
-              <p class="open-time-clock">08.00 - 12.00</p>
-              <p class="open-time-course">Pause</p>
-              <p class="open-time-clock">14.00 - 18.00</p>
-              <p class="open-time-course">Fin de la journée</p>
+              <!--p class="open-time-clock">08.00 - 12.00</p-->
+              <p class="open-time-course">Par rendez-vous</p>
+              <!--p class="open-time-clock">14.00 - 18.00</p>
+              <p class="open-time-course">Fin de la journée</p-->
             </div>
             <div class="weekends">
               <h3 class="open-time-title">Samedi - Dimanche</h3>
-              <p class="open-time-clock">00.00 - 00.00</p>
-              <p class="open-time-course">Repos</p>
+              <!--p class="open-time-clock">00.00 - 00.00</p-->
+              <p class="open-time-course">OFF</p>
             </div>
           </div>
         </div>
@@ -309,7 +309,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <a href="coucou-page.html" class="join-us-btn">CouCou!</a>
+            <a href="coucou-page.html" class="join-us-btn">Cliquez ICI</a>
             <p class="join-us-call"> Allez! <a href="#" class="join-us-phone-nr"></a></p>
           </div>
         </div>
