--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a href="mailto:ansetaabu2030@gmail.com">ansetaabu2030@gmail.com</a>
             </div>    
             <div class="col-md-4 logo order-1 order-md-12">
-              <img class="logo-img" src="img/myLogo.jpg" alt="">
+              <img class="logo-img" src="img/logo1.jpeg" alt="">
             </div> 
             <div class="col-md-4 top-bar-right order-3 order-md-12">
               <i class="fas fa-phone-alt"></i> 
@@ -283,7 +283,7 @@
                </form>
             </div> 
         </div-->
-          <div class="col-lg-6 open-time">
+          <div class="col-lg-12 open-time">
             <div class="weekdays">
               <h3 class="open-time-title">Lundi - Vendredi</h3>
               <!--p class="open-time-clock">08.00 - 12.00</p-->
