--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a href="mailto:ansetaabu2030@gmail.com">ansetaabu2030@gmail.com</a>
             </div>    
             <div class="col-md-4 logo order-1 order-md-12">
-              <img class="logo-img" src="img/logo1.jpeg" alt="">
+              <img class="logo-img" src="img/logo2.png" alt="">
             </div> 
             <div class="col-md-4 top-bar-right order-3 order-md-12">
               <i class="fas fa-phone-alt"></i> 
@@ -100,8 +100,8 @@
       <div class="advantages-section">
         <div class="row sections-detail">
           <div class="col-12">
-            <h2 class="section-title">Services d'application</h2>
-            <p class="section-title-desc">Retrouvez-moi dans différents services</p>
+            <h2 class="section-title">Mes Compétences</h2>
+            <p class="section-title-desc">Retrouvez-moi dans le(la):</p>
           </div>
         </div>
         <div class="row advantages-detail">
@@ -239,7 +239,7 @@
         <div class="row sections-detail">
           <div class="col-12">
             <h2 class="section-title">Ma Disponibilité</h2>
-            <!--p class="section-title-desc">Contactez-moi via le formulaire ci-dessous</p-->
+            <p class="section-title-desc">rdv</p>
           </div>
         </div>
         <div class="row">
