--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col-12 content-col">
               <h1 class="site-title">Rien ne change si Rien ne change!</h1>
               <p class="site-title-desc">La seule défaite c'est de ne pas essayer...</p>
-              <a class="banner-btn" href="coucou-page.html">CouCou!</a>
+              <a class="banner-btn" href="coucou-page.html">Check!</a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
         <div class="row sections-detail">
           <div class="col-12">
             <h2 class="section-title">Mes Compétences</h2>
-            <p class="section-title-desc">Retrouvez-moi dans le(la):</p>
+            <p class="section-title-desc">Retrouvez-moi dans :</p>
           </div>
         </div>
         <div class="row advantages-detail">
@@ -294,7 +294,7 @@
             <div class="weekends">
               <h3 class="open-time-title">Samedi - Dimanche</h3>
               <!--p class="open-time-clock">00.00 - 00.00</p-->
-              <p class="open-time-course">OFF</p>
+              <p class="open-time-course">OFF!</p>
             </div>
           </div>
         </div>
